--- a/style.css
+++ b/style.css
@@ -1,1 +1,40 @@
-
+header{
+  background-color: #F0F8FF;
+  text-align: center;
+  border: 2px solid black;
+  border-radius: 25px;
+  width: 75%;
+  margin: auto;
+  letter-spacing: 2px;
+  font-family: sans-serif;
+}
+#info{
+  font-family: sans-serif;
+}
+body{
+  background-color: #B0C4DE;
+  border:50px solid;
+  border-color: #F0F8FF;
+  padding: 3%;
+  margin: 10%;
+}
+h2{
+  text-align: center;
+  border: 2px black;
+  border-right-style: solid;
+  border-left-style: solid;
+  border-bottom-style: solid;
+  border-radius: 5px;
+  width: 50%;
+  padding-left: 10%;
+  padding-right: 10%;
+  margin: auto;
+  font-family: sans-serif;
+}
+p{
+  text-align: justify;
+  padding-bottom: 20px;
+}
+footer{
+  padding-top: 20px;
+}
